--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,12 @@
 PORT=2000
 
+BASE_PATH=http://localhost
+
+MONGO_URL=mongodb+srv://chat-app:Madhi001@cluster0.tioed.mongodb.net/chatApp
+MONGO_DB_NAME=chatApp
+MONGO_DB_USERS_COLLECTION=users
+MONGO_DB_CHATS_COLLECTION=chats 
+
 PROFILE_IMAGE_PATH=profiles
 AUDIO_PATH=audio 
 PROFILE_IMAGE_PATH=attachment
